[gd_scene load_steps=4 format=3 uid="uid://g7qyvfuhihty"]

[ext_resource type="Script" uid="uid://by1up8jgobqco" path="res://Scripts/Managers/audio_manager.gd" id="1_mavxc"]
[ext_resource type="AudioStream" uid="uid://ce4ygkpdvvsou" path="res://Assets/audio/player/player_step.mp3" id="2_mavxc"]
[ext_resource type="AudioStream" uid="uid://dd5l074aa6dcg" path="res://Assets/audio/background/TitleScreen.mp3" id="3_7xo4d"]

[node name="AudioManager" type="Node2D"]
script = ExtResource("1_mavxc")

[node name="Player" type="Node2D" parent="."]

[node name="PlayerStep" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("2_mavxc")

[node name="Background" type="Node2D" parent="."]

[node name="TitleScreen" type="AudioStreamPlayer2D" parent="Background"]
stream = ExtResource("3_7xo4d")
